Closed Bug 1663878 Opened 4 years ago Closed 1 year ago

New wpt failures in /custom-elements/CustomElementRegistry.html

Categories

(Core :: DOM: Core & HTML, defect)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: mozilla.org, Assigned: avandolder)

References

(Blocks 2 open bugs)

Details

(Whiteboard: [wpt])

Attachments

(1 file)

Syncing wpt PR 25033 found new untriaged test failures in CI

Tests Affected

Firefox-only failures

/custom-elements/CustomElementRegistry.html
customElements.define must get callbacks of the constructor prototype: FAIL
customElements.define must rethrow an exception thrown while getting callbacks on the constructor prototype: FAIL
customElements.define must rethrow an exception thrown while converting a callback value to Function callback type: FAIL

CI Results

Gecko CI (Treeherder)
GitHub PR Head

Notes

These updates will be on mozilla-central once bug 1659403 lands.

Note: this bug is for tracking fixing the issues and is not
owned by the wpt sync bot.

This bug is linked to the relevant tests by an annotation in
https://github.com/web-platform-tests/wpt-metadata. These annotations
can be edited using the wpt interop dashboard
https://jgraham.github.io/wptdash/

If this bug is split into multiple bugs, please also update the
annotations, otherwise we are unable to track which wpt issues are
already triaged. Resolving as duplicate or closing this issue should
be cause the bot to automatically update or remove the annotation.

Depends on: 1528791
No longer depends on: 1659403
Blocks: 1528791
No longer blocks: custom-elements
Depends on: 1659403
No longer depends on: 1528791

I checked the new failures, they should be covered by bug 1621530.

See Also: → 1621530
Assignee: nobody → avandolder
Status: NEW → ASSIGNED
Pushed by avandolder@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/539631c52ebf
Only process form callbacks for form-associated custom elements. r=edgar
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: