Bug 1663878 - Only process form callbacks for form-associated custom elements. r=edgar

Differential Revision: https://phabricator.services.mozilla.com/D167827